--- a/appsettings.json
+++ b/appsettings.json
@@ -1,12 +1,12 @@
 {
+  "ConnectionStrings": {
+    "WaterConnection": "Server=tcp:myfreesqldbserverlarson.database.windows.net,1433;Initial Catalog=INTEX_II_DB;Persist Security Info=False;User ID=gabeadmin;Password=T5j^*MoxK@qsPGUcrqMW;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "WaterConnection": "Server=tcp:myfreesqldbserverlarson.database.windows.net,1433;Initial Catalog=INTEX_II_DB;Persist Security Info=False;User ID=gabeadmin;Password=T5j^*MoxK@qsPGUcrqMW;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
-  }
+  "AllowedHosts": "*"
 }
