--- a/INTEX_II_413.csproj
+++ b/INTEX_II_413.csproj
@@ -31,7 +31,7 @@
   <ItemGroup>
     <Folder Include="Areas\Identity\Data\" />
     <PackageReference Include="Microsoft.ML" Version="1.5.5" />
-    <PackageReference Include="Microsoft.ML.OnnxRuntime" Version="1.8.1" />
+    <PackageReference Include="Microsoft.ML.OnnxRuntime" Version="*" />
     <PackageReference Include="Microsoft.ML.OnnxTransformer" Version="1.5.5" />
   </ItemGroup>
 
