added client secret to vault

--- a/INTEX_II_413.csproj
+++ b/INTEX_II_413.csproj
@@ -41,6 +41,9 @@
     <None Update="Fraud_Identification_model_2.onnx">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="Fraud_Identification_model_3.onnx">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
